public/resources/scss/stats.scss
/* ... */
@keyframes shine {
  0% {
    transform: translateY(120%);
  }

  33% {
    transform: translateY(-120%);
  }

  100% {
    transform: translateY(-120%);
  }
}

.item-icon.is-enchanted {
  filter: url(#enchanted-glint);
  #stats_content &.stats-piece-icon,
  &.piece-icon {
    filter: url(#enchanted-glint) drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
  }
}

.piece-icon {
  position: absolute;
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));
  z-index: 15;
  pointer-events: none;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.5);
  transform-origin: center center;
  image-rendering: crisp-edges;
  @supports (image-rendering: pixelated) {
    image-rendering: pixelated;
  }
}

.custom-icon {
  background-size: 128px auto;
  background-repeat: no-repeat;
  background-position: center center !important;
  mask-size: 128px 128px;
  mask-repeat: no-repeat;
  mask-position: center center;
  -webkit-mask-size: 128px 128px;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center center;
}

.piece-supreme-bg,
.style-scrollbar .piece-supreme-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§4);
}
.piece-supreme-bg + .item-lore {
  scrollbar-color: var(--§4) transparent;
}
.piece-supreme-fg {
  color: var(--§4) !important;
}

.piece-very_special-bg,
.style-scrollbar .piece-very_special-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§c);
}
.piece-very_special-bg + .item-lore {
  scrollbar-color: var(--§c) transparent;
}
.piece-very_special-fg {
  color: var(--§c) !important;
}

.piece-special-bg,
.style-scrollbar .piece-special-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§c);
}
.piece-special-bg + .item-lore {
  scrollbar-color: var(--§c) transparent;
}
.piece-special-fg {
  color: var(--§c) !important;
}

.piece-divine-bg,
.style-scrollbar .piece-divine-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§b);
}
.piece-divine-bg + .item-lore {
  scrollbar-color: var(--§b) transparent;
}
.piece-divine-fg {
  color: var(--§b) !important;
}

.piece-mythic-bg,
.style-scrollbar .piece-mythic-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§d);
}
.piece-mythic-bg + .item-lore {
  scrollbar-color: var(--§d) transparent;
}
.piece-mythic-fg {
  color: var(--§d) !important;
}

.piece-legendary-bg,
.style-scrollbar .piece-legendary-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§6);
}
.piece-legendary-bg + .item-lore {
  scrollbar-color: var(--§6) transparent;
}
.piece-legendary-fg {
  color: var(--§6) !important;
}

.piece-epic-bg,
.style-scrollbar .piece-epic-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§5);
}
.piece-epic-bg + .item-lore {
  scrollbar-color: var(--§5) transparent;
}
.piece-epic-fg {
  color: var(--§5) !important;
}

.piece-rare-bg,
.style-scrollbar .piece-rare-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§9);
}
.piece-rare-bg + .item-lore {
  scrollbar-color: var(--§9) transparent;
}
.piece-rare-fg {
  color: var(--§9) !important;
}

.piece-uncommon-bg,
.style-scrollbar .piece-uncommon-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§a);
}
.piece-uncommon-bg + .item-lore {
  scrollbar-color: var(--§a) transparent;
}
.piece-uncommon-fg {
  color: var(--§a) !important;
}

.piece-common-bg,
.style-scrollbar .piece-common-bg + .item-lore::-webkit-scrollbar-thumb {
  background-color: var(--§f);
}
.piece-common-bg + .item-lore {
  scrollbar-color: var(--§f) transparent;
}
.piece-common-fg {
  color: var(--§f) !important;
}

.piece.piece-rarity-upgrade-1 {
  --upgraded-from: #000;
  background-image: linear-gradient(to top right, transparent 0 90%, var(--upgraded-from) 90% 100%);

  &.piece-very_special-bg {
    --upgraded-from: var(--§c);
  }
  &.piece-special-bg {
    --upgraded-from: var(--§4);
  }
  &.piece-supreme-bg {
    --upgraded-from: var(--§b);
  }
  &.piece-divine-bg {
    --upgraded-from: var(--§d);
  }
  &.piece-mythic-bg {
    --upgraded-from: var(--§6);
  }
  &.piece-legendary-bg {
    --upgraded-from: var(--§5);
  }
  &.piece-epic-bg {
    --upgraded-from: var(--§9);
  }
  &.piece-rare-bg {
    --upgraded-from: var(--§a);
  }
  &.piece-uncommon-bg {
    --upgraded-from: var(--§f);
  }
}

.stat-sub-header {
  font-size: 20px;
  color: rgba(var(--text-rgb), 0.9);
  font-weight: 600;

  &::after {
    content: "";
  }
}

.extender {
  -webkit-appearance: none;
  appearance: none;
  display: block;
  padding-left: 0;
  padding-right: 4px;
  border: none;
  margin: 1em 0;
  background: none;
  transition: color 0.1s;

  &:hover,
  &:focus-visible {
    color: var(--text-hex);
  }

  &::before {
    content: "";
    display: inline-block;
    width: 24px;
    height: 24px;
    vertical-align: top;
    background-color: currentColor;
    -webkit-mask-image: url(/resources/img/icons/chevron-down.svg);
    mask-image: url(/resources/img/icons/chevron-down.svg);
    -webkit-mask-size: 100%;
    mask-size: 100%;
    transform: rotate(0deg);
    transition: transform 0.1s ease-in-out;
  }

  &[aria-expanded="true"]::before {
    transform: rotate(-180deg);
  }

  &[aria-expanded="false"] + .extendable {
    display: none;
  }
}

.active-pet-info {
  display: inline-block;
  margin-top: 20px;
  font-size: 20px;
  font-weight: 500;

  div {
    margin: 4px;
  }
}

.piece.other-pet {
  margin-bottom: 25px;
  content-visibility: visible;
}

.pet-name {
  text-transform: capitalize;
  font-weight: 700;
}

.other-pet-level {
  position: absolute;
  top: calc(100% + 5px);
  width: 100%;
  text-align: center;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 15px;
}

.missing-pet,
.missing-accessory {
  filter: grayscale(0.8);
  transition: filter 0.2s;

  &:hover,
  &:focus,
  &.sticky-stats {
    filter: grayscale(0);
  }
}
/* ... */

